# sashasteroid

./: CMakeLists.txt  README.md  build.sh  flappy_bird.cpp
include/: Asteroid.hpp  FlappyBird.hpp  GameManager.hpp  Laser.hpp
src/: Asteroid.cpp  FlappyBird.cpp  GameManager.cpp  Laser.cpp  chainedList.c  main.cpp
